style(loot_tables): format like minecraft files

--- a/data/minecraft/loot_tables/blocks/snow.json
+++ b/data/minecraft/loot_tables/blocks/snow.json
@@ -3,6 +3,7 @@
   "pools": [
     {
       "rolls": 1.0,
+      "bonus_rolls": 0.0,
       "entries": [
         {
           "type": "minecraft:alternatives",
@@ -67,7 +68,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 2
+                      "count": 2.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -86,7 +88,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 3
+                      "count": 3.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -105,7 +108,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 4
+                      "count": 4.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -124,7 +128,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 5
+                      "count": 5.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -143,7 +148,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 6
+                      "count": 6.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -162,7 +168,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 7
+                      "count": 7.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -172,7 +179,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 8
+                      "count": 8.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snowball"
@@ -209,7 +217,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 2
+                      "count": 2.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snow"
@@ -228,7 +237,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 3
+                      "count": 3.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snow"
@@ -247,7 +257,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 4
+                      "count": 4.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snow"
@@ -266,7 +277,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 5
+                      "count": 5.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snow"
@@ -285,7 +297,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 6
+                      "count": 6.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snow"
@@ -304,7 +317,8 @@
                   "functions": [
                     {
                       "function": "minecraft:set_count",
-                      "count": 7
+                      "count": 7.0,
+                      "add": false
                     }
                   ],
                   "name": "minecraft:snow"
